[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.529412, 0.67451, 0.803922, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 500.0
margin_top = 212.0
margin_right = -500.0
margin_bottom = -203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBoard" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="Label" parent="Panel/ScoreBoard"]
margin_top = 109.0
margin_right = 280.0
margin_bottom = 123.0
text = "Combo: 000"
align = 1

[node name="StreakLabel" type="Label" parent="Panel/ScoreBoard"]
margin_top = 127.0
margin_right = 280.0
margin_bottom = 141.0
text = "Streak: 000"
align = 1

[node name="BallsLabel" type="Label" parent="Panel/ScoreBoard"]
margin_top = 145.0
margin_right = 280.0
margin_bottom = 159.0
text = "Lost Balls: 000"
align = 1

[node name="TimeLabel" type="Label" parent="Panel/ScoreBoard"]
margin_top = 163.0
margin_right = 280.0
margin_bottom = 177.0
text = "Time: 00:00.000"
align = 1

[node name="ScoreLabel" type="Label" parent="Panel/ScoreBoard"]
margin_top = 181.0
margin_right = 280.0
margin_bottom = 195.0
text = "Score: 00000"
align = 1

[node name="NewGameButton" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 85.5956
margin_top = 6.89197
margin_right = -82.4044
margin_bottom = 55.892
button_mask = 7
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/NewGameButton" to="." method="_on_NewGameButton_pressed"]
